pic alignment issue

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -14,6 +14,10 @@
 }
 
 
+.image-section .container.flex {
+    flex-direction: column;
+}
+
 .text-container {
 	max-width: 750px;
 }
